# rust-starter

./: .clog.toml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cargo-count.dot  justfile  rustfmt.toml
.circleci/: config.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/workflows/: audit.yml  build.yml  codecov.yml  docker.yml  lint.yml  rust.yml  tests.yml  toc.yml
cli/: Cargo.toml
cli/src/: lib.rs
cli/src/resources/: cli_config.yml
core/: Cargo.toml
core/benches/: 01_default.rs
core/src/: commands.rs  error.rs  hazard.rs  lib.rs
core/src/resources/: cli_config.yml  default_config.toml
core/src/utils/: config.rs  error.rs  log.rs  mod.rs
core/tests/: test_cli.rs  test_config.rs
docker/: .dockerignore  Dockerfile
src/: main.rs
src/resources/: default_config.toml
tests/: test_cli.rs
tui/: Cargo.toml
tui/src/: lib.rs
utils/: Cargo.toml
utils/src/: app_config.rs  error.rs  lib.rs  log.rs  logger.rs  types.rs
utils/tests/: test_config.rs
utils/tests/resources/: test_config.toml
