[package]
name = "cli"
version = "2.0.0-beta"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "CLI interface for rust-starter"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
core = { path = "../core" }
clap_complete = "4.4.4"

[dependencies.clap]
version = "4.4.7"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
