[package]
name = "cli"
version = "2.0.0"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "CLI interface for rust-starter"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
core = { path = "../core" }
clap_complete = "4.5.8"

[dependencies.clap]
version = "4.5.9"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
