[package]
name = "cli"
version = "2.0.1"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "CLI interface for rust-starter"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
core = { path = "../core" }
clap_complete = "4.5.50"

[dependencies.clap]
version = "4.5.37"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
