[package]
name = "utils"
version = "2.0.0-beta"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "Various utilities and functionalities"
edition = "2021"

[features]
nightly = []
termlog = []
syslog = []
journald = []

[dependencies]
thiserror = "1.0.50"
backtrace = "0.3.69"
color-backtrace = "0.6.1"
config = "0.13.3"
lazy_static = "1.4.0"
slog = "2.7.0"
slog-syslog = "0.13.0"
slog-term = "2.9.0"
slog-scope = "4.4.0"
slog-async = "2.8.0"
slog-stdlog = "4.1.1"
slog-journald = "2.2.0"
clap = "4.4.7"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
